# libsbc

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README.md  TODO  appveyor.yml  configure.ac  libsbc.rc  libsbc.vcxproj  libsbc.vcxproj.filters
contrib/: .gitignore  libsbc.rc  libsbc.sln  libsbc.vcxproj  libsbc.vcxproj.filters  resource.h  stage0.ps1
sbc/: sbc.c  sbc.h  sbc.pc.in  sbc.sym  sbc_math.h  sbc_primitives.c  sbc_primitives.h  sbc_primitives_armv6.c  sbc_primitives_armv6.h  sbc_primitives_iwmmxt.c  sbc_primitives_iwmmxt.h  sbc_primitives_mmx.c  sbc_primitives_mmx.h  sbc_primitives_neon.c  sbc_primitives_neon.h  sbc_primitives_sse.c  sbc_primitives_sse.h  sbc_private.h  sbc_tables.h
src/: formats.h  sbcdec.c  sbcenc.c  sbcinfo.c  sbctester.c
